<resources>
    <string name="app_name">Github Pencari User</string>
    <string name="description">Deskripsi</string>
    <string name="temperature">Temperatur</string>
    <string name="insert_uname">Masukkan Nama Pengguna</string>
    <string name="search">Cari</string>
    <string name="tab_followers">Pengikut</string>
    <string name="tab_following">Mengikuti</string>
    <string name="tName">Nama User</string>
    <string name="tUrl">URL Pengguna</string>
    <string name="detail_user">Detail Pengguna</string>
    <string name="tUname">Nama Pengguna</string>
    <string name="tCompany">Perusahaan</string>
    <string name="tLocation">Lokasi</string>
    <string name="tFollowing">\u0020 Mengikuti</string>
    <string name="tFollowers">\u0020 Pengikut</string>
    <string name="tRespository">\u0020 Repositori</string>
    <string name="at">\u0020@</string>
    <string name="find_users_github">Cari Users Github</string>
    <string name="submission_2_dicoding_bfaa">Submission 3 Dicoding BFAA</string>
    <string name="belum_ada_user_yang_dicari">Belum Ada User Yang Dicari</string>
    <string name="mari_telusuri_dengan_mencari_username_nya">Mari Telusuri Dengan Mencari Username Nya :)</string>
    <string name="username">Nama Pengguna</string>
    <string name="line">|</string>
    <string name="dummySettings">Pengaturan</string>
    <string name="dummyName">Agung Prabowo</string>
    <string name="dummyEmail">prabowoa48@gmail.com</string>
    <string name="dummyLanguage">Ubah Bahasa</string>
    <string name="belum_ada_pengikut">Belum Ada Pengikut</string>
    <string name="belum_mengikuti_siapapun">Belum Mengikuti Siapapun</string>
    <string name="github_users_finder">Cari Pengguna Github</string>
    <string name="by_dicoding">Dicoding Indonesia</string>
    <string name="daftar_favorite">Daftar Favorite</string>
    <string name="belum_ada_user_favorit">Belum Ada User Favorit</string>
    <string name="pengingat_harian">Pengingat Harian</string>
    <string name="dari_agung_prabowo">Dari Agung Prabowo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="add_to_favorite">Ditambahkan Ke Daftar Favorit</string>
    <string name="delete_from_fav">Dihapus Dari Daftar Favorit</string>
    <string name="toast_reminder">Notifkasi Akan Aktif Setiap Jam 9 Pagi</string>
    <string name="toast_off_reminder">Notifikasi Harian Dimatikan</string>
    <string name="maaf_data_tidak_ditemukan">Maaf Data Tidak Ditemukan :(</string>
    <string name="berhasil">Berhasil !</string>
    <string name="warning_user">Data Tidak Ditemukan, Pastikan Nama User Dengan Benar</string>
    <string name="notice_notif">Hai !, Cari User Github Favorite Kamu Yuk :)</string>
    <string name="title_notification">Notifikasi Harian Github Finder</string>
</resources>
